test/types/sync/vass/maxmin-on-syncs2.good
maxmin-on-syncs2.chpl:6: error: Cannot directly compare sync vars; apply a .read??() method first
$CHPL_HOME/modules/standard/IO.chpl:3226: error: sync variables cannot currently be written - apply readFE/readFF() to those variables first
maxmin-on-syncs2.chpl:7: error: Cannot directly compare single vars; apply a .read??() method first
$CHPL_HOME/modules/standard/IO.chpl:3226: error: single variables cannot currently be written - apply readFF() to those variables first
maxmin-on-syncs2.chpl:12: error: Cannot directly compare sync vars; apply a .read??() method first
maxmin-on-syncs2.chpl:13: error: Cannot directly compare single vars; apply a .read??() method first
